--- a/src/main/resources/static/styles/catalogo.css
+++ b/src/main/resources/static/styles/catalogo.css
@@ -58,7 +58,7 @@
     border-radius: 8px !important;
     cursor: pointer;
     /*margin: 0 1rem 1rem 0;*/
-    box-shadow: 0 1px 1px rgb(0 0 0 / 10%);
+    box-shadow: 0 0 1px 0 rgb(51 60 109);
 }
 
 .card:hover {
