--- a/src/main/resources/static/styles/styles.css
+++ b/src/main/resources/static/styles/styles.css
@@ -51,7 +51,7 @@ body.electroplus {
     font-style: normal;
     padding-top: 75px;
     letter-spacing: 0.01rem;
-    background-color: var(--electroplus-one-cero);
+    /*background-color: var(--electroplus-one-cero);*/
 }
 
 .bg-one {
@@ -85,14 +85,14 @@ body.electroplus {
     border-color: var(--electroplus-one-cero) !important;
 }
 
-div.row.no-gutters.items>div.col-6.col-sm-4.col-md-3.item:last-of-type {
+div.row.no-gutters.items > div.col-6.col-sm-4.col-md-3.item:last-of-type {
     padding-left: 0 !important;
 }
 
-div.row.no-gutters.items>div.col-6.col-sm-4.col-md-3.item{
+div.row.no-gutters.items > div.col-6.col-sm-4.col-md-3.item {
     padding: 0.5rem;
 }
 
-.item:nth-child(3n) {
-    background: blue;
+.bg-cabecera {
+    background-color: #E4F7FB !important;
 }
