--- a/src/main/resources/templates/catalogo/catalogo.html
+++ b/src/main/resources/templates/catalogo/catalogo.html
@@ -5,7 +5,7 @@
 <body>
 <div class="bg-one" style="height: 7rem"></div>
 <div class="container" style="margin-top: -80px">
-    <div class="electroplus__cabecera mt-2">
+    <div class="electroplus__cabecera mt-2" style="background-color: #E5E7ED">
         <div class="d-flex justify-content-around align-items-center">
             <div class="px-2">
                 <label class="electroplus__cabecera_title text-one">BIENVENIDO A SU TIENDA VIRTUAL</label>
