--- a/src/main/resources/templates/fragment/fragment.html
+++ b/src/main/resources/templates/fragment/fragment.html
@@ -118,9 +118,17 @@
                                 <i class="feather pr-2 icon-user icon-xs"></i>
                                 Mi Cuenta
                             </a>
+                            <a class="dropdown-item" href="/dashboard">
+                                <i class="feather pr-2 icon-pie-chart icon-xs"></i>
+                                Dashboard
+                            </a>
                             <a class="dropdown-item" href="/carrito">
                                 <i class="feather pr-2 icon-shopping-cart icon-xs"></i>
                                 Carrito
+                            </a>
+                            <a class="dropdown-item" href="/pedidos">
+                                <i class="feather pr-2 icon-shopping-bag icon-xs"></i>
+                                Pedidos
                             </a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" style="cursor:pointer;"
@@ -138,12 +146,13 @@
     <th:block th:include="${template}"/>
 
     <div class="toast__animation pt-4" th:if="${mensaje}">
-        <div class="toast bg-success show" id="toastsuccess" data-delay="3000" data-autohide="true" role="alert"
+        <div class="toast bg-success alert alert-dismissible fade show" id="toastsuccess"
+             data-delay="3000" data-autohide="true" role="alert"
              style="position: fixed; z-index: 1030; top: 75px; right: 2rem;">
             <div class="toast-header">
                 <strong class="mr-auto text-success"><i class="feather icon-check"></i> Success !</strong>
                 <!--small>text</small-->
-                <button type="button" class="ml-2 mb-1 close" data-dismiss="alert">
+                <button type="button" class="ml-2 mb-1 close" data-dismiss="alert" aria-label="Close">
                     <span class="toast__close" aria-hidden="true">&times;</span>
                 </button>
             </div>
@@ -153,11 +162,11 @@
         </div>
     </div>
     <div class="toast__animation pt-4" th:if="${error}">
-        <div class="toast bg-danger show" id="toasterror" data-delay="3000" data-autohide="true" role="alert"
+        <div class="toast bg-danger alert alert-dismissible fade show" id="toasterror" role="alert"
              style="position: fixed; z-index: 1030; top: 75px; right: 2rem;">
             <div class="toast-header">
                 <strong class="mr-auto text-danger"><i class="feather icon-check"></i> Error !</strong>
-                <button type="button" class="ml-2 mb-1 close" data-dismiss="alert">
+                <button type="button" class="ml-2 mb-1 close" data-dismiss="alert" aria-label="Close">
                     <span class="toast__close" aria-hidden="true">&times;</span>
                 </button>
             </div>
