--- a/src/main/resources/templates/contacto/create.html
+++ b/src/main/resources/templates/contacto/create.html
@@ -17,26 +17,29 @@
         </div>
     </div>
     <div class="py-4">
-        <form th:object="${contacto}" th:action="@{/contacto}" method="POST">
+        <form th:object="${contacto}" th:action="@{/contacto}" method="POST" class="needs-validation" novalidate>
             <div class="row">
                 <div class="col-12 col-sm-6">
                     <div class="form-group">
                         <label for="nombres" class="form-label">Nombres</label>
-                        <input type="text" class="form-control" id="nombres" th:field="*{nombres}"/>
+                        <input type="text" class="form-control" id="nombres" th:field="*{nombres}" required/>
+                        <div class="invalid-feedback mt-0">Este campo es obligatorio</div>
                     </div>
                 </div>
 
                 <div class="col-12 col-sm-6">
                     <div class="form-group">
                         <label for="apellidos" class="form-label">Apellidos</label>
-                        <input type="text" class="form-control" id="apellidos" th:field="*{apellidos}"/>
+                        <input type="text" class="form-control" id="apellidos" th:field="*{apellidos}" required/>
+                        <div class="invalid-feedback mt-0">Este campo es obligatorio</div>
                     </div>
                 </div>
 
                 <div class="col-12 col-sm-6">
                     <div class="form-group">
                         <label for="telefono" class="form-label">Telefono</label>
-                        <input type="text" class="form-control" id="telefono" th:field="*{telefono}"/>
+                        <input type="text" class="form-control" id="telefono" th:field="*{telefono}" required/>
+                        <div class="invalid-feedback mt-0">Este campo es obligatorio</div>
                     </div>
                 </div>
 
@@ -44,19 +47,21 @@
                     <div class="form-group">
                         <label for="correo" class="form-label">Correo Electrónico</label>
                         <input type="email" class="form-control" id="correo" th:field="*{correo}" required/>
+                        <div class="invalid-feedback mt-0">Este campo es obligatorio</div>
                     </div>
                 </div>
 
                 <div class="col-12 col-sm-6">
                     <div class="form-group">
                         <label for="mensaje" class="form-label">Mensaje</label>
-                        <input type="text" class="form-control" id="mensaje" th:field="*{mensaje}"/>
+                        <input type="text" class="form-control" id="mensaje" th:field="*{mensaje}" required/>
+                        <div class="invalid-feedback mt-0">Este campo es obligatorio</div>
                     </div>
                 </div>
 
                 <div class="col-12">
                     <button class="btn btn-primary btn-block" type="submit">
-                        Enviar Consulta
+                      <i class="feather icon-send pr-3"></i>   Enviar Consulta
                     </button>
                 </div>
             </div>
