--- a/src/main/resources/templates/public/registrarme.html
+++ b/src/main/resources/templates/public/registrarme.html
@@ -18,28 +18,31 @@
         </div>
     </div>
     <div class="py-4">
-        <form th:action="@{/public/cliente}" th:object="${cliente}" method="POST">
+        <form th:action="@{/public/cliente}" th:object="${cliente}" method="POST" class="needs-validation" novalidate>
             <div class="row">
                 <div class="col-12 col-sm-6">
                     <div class="form-group">
                         <input type="hidden" th:field="*{id}">
                         <label for="username" class="form-label">Email</label>
                         <input type="text" th:field="*{username}" class="form-control" id="username"
-                               placeholder="Email del usuario">
+                               placeholder="Email del usuario" required>
+                        <div class="invalid-feedback mt-0">Este campo es obligatorio</div>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6">
                     <div class="form-group">
                         <label for="nombre" class="form-label">Nombre</label>
                         <input type="text" th:field="*{nombre}" class="form-control" id="nombre"
-                               placeholder="Nombre del usuario">
+                               placeholder="Nombre del usuario" required>
+                        <div class="invalid-feedback mt-0">Este campo es obligatorio</div>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6">
                     <div class="form-group">
                         <label for="apellidos" class="form-label">Apellidos</label>
                         <input type="text" th:field="*{apellidos}" class="form-control" id="apellidos"
-                               placeholder="Apellidos del usuario">
+                               placeholder="Apellidos del usuario" required>
+                        <div class="invalid-feedback mt-0">Este campo es obligatorio</div>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6">
@@ -51,25 +54,31 @@
                                 <span th:text="${role.codigo}"></span>
                             </option>
                         </select>
+                        <div class="invalid-feedback mt-0">Este campo es obligatorio</div>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6">
                     <div class="form-group">
                         <label for="password" class="form-label">Contraseña</label>
                         <input type="password" th:field="*{password} " class="form-control" id="password"
-                               placeholder="Contraseña">
+                               placeholder="Contraseña" required autocomplete="off">
+                        <div class="invalid-feedback mt-0">Este campo es obligatorio</div>
                     </div>
                 </div>
 
                 <div class="col-12 col-sm-6">
                     <div class="form-group">
                         <label for="confirmarpassword" class="form-label">Confirmar Contraseña</label>
-                        <input type="password" th:field="*{confirmarpassword}" class="form-control" id="confirmarpassword"
-                               placeholder="Confirmar contraseña">
+                        <input type="password" th:field="*{confirmarpassword}" class="form-control"
+                               id="confirmarpassword" autocomplete="off"
+                               placeholder="Confirmar contraseña" required>
+                        <div class="invalid-feedback mt-0">Este campo es obligatorio</div>
                     </div>
                 </div>
                 <div class="col-12">
-                    <input type="submit" class="btn btn-primary btn-block" value="Guardar">
+                    <button type="submit" class="btn btn-primary btn-block">
+                        <i class="feather icon-user-plus pr-3"></i> Registrarse
+                    </button>
                 </div>
 
                 <div class="col-12 text-center pt-3">
