--- a/src/main/resources/templates/fragment/fragment.html
+++ b/src/main/resources/templates/fragment/fragment.html
@@ -9,6 +9,7 @@
 
     <title>ELECTRO PLUS - Tienda Virtual</title>
 
+    <!--Hojas de estilo-->
     <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
     <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min-jsf.css}"/>
     <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap-jsf.css}"/>
@@ -18,6 +19,14 @@
     <link th:rel="stylesheet" type="text/css" th:href="@{/styles/animaciones.css}"/>
     <link th:rel="stylesheet" type="text/css" th:href="@{/styles/catalogo.css}"/>
     <link th:rel="stylesheet" th:href="@{/styles/toast.css}"/>
+
+    <!--    Headers-->
+    <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+    <script th:src="@{/webjars/jquery-ui/jquery-ui.min.js}"></script>
+    <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+    <script th:src="@{/webjars/bootstrap-datepicker/js/bootstrap-datepicker.min.js}"></script>
+    <script th:src="@{/webjars/jquery.inputmask/jquery.inputmask.min.js}"></script>
+    <script th:src="@{/js/validator.js}"></script>
 </head>
 
 <body class="electroplus">
@@ -176,14 +185,6 @@
         </div>
     </div>
 </main>
-
-<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
-<script th:src="@{/webjars/jquery-ui/jquery-ui.min.js}"></script>
-<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-<script th:src="@{/webjars/bootstrap-datepicker/js/bootstrap-datepicker.min.js}"></script>
-<script th:src="@{/webjars/jquery.inputmask/jquery.inputmask.min.js}"></script>
-<script th:src="@{/js/validator.js}"></script>
-
 </body>
 
 </html>
