--- a/src/main/resources/templates/pago/pago.html
+++ b/src/main/resources/templates/pago/pago.html
@@ -3,32 +3,36 @@
       th:replace="~{fragment/fragment :: fragment (~{::body},'pagar')}">
 
 <body>
-<div class="bg-one" style="height: 7rem"></div>
-<div class="container" style="margin-top: -80px">
+<!--<div class="bg-one" style="height: 7rem"></div>-->
+<!--style="margin-top: -80px"-->
+<div class="container">
     <div class="py-4">
-        <form th:object="${pago}" th:action="@{/pago/create}" method="post">
+        <form th:object="${pago}" th:action="@{/pago/create}" method="post" class="needs-validation" novalidate>
             <input type="hidden" th:field="*{idUsuario}"/>
             <input type="hidden" th:field="*{montoTotal}"/>
             <div class="row">
                 <div class="col-12 col-sm-6">
                     <div class="form-group">
                         <label for="envio" class="form-label">Direccion de envío</label>
-                        <input type="text" class="form-control" id="envio">
+                        <input type="text" class="form-control" id="envio" required>
+                        <div class="invalid-feedback mt-0">Este campo es obligatorio</div>
                     </div>
                 </div>
 
                 <div class="col-12 col-sm-6">
                     <div class="form-group">
                         <label for="nombreTarjeta" class="form-label">Nombre Tarjeta</label>
-                        <input type="text" th:field="*{nombreTarjeta}" class="form-control" id="nombreTarjeta">
+                        <input type="text" th:field="*{nombreTarjeta}" class="form-control" id="nombreTarjeta" required>
+                        <div class="invalid-feedback mt-0">Este campo es obligatorio</div>
                     </div>
                 </div>
 
                 <div class="col-12 col-sm-6">
                     <div class="form-group">
-                        <label for="numeroTarjeta" class="form-label">CVV</label>
+                        <label for="numeroTarjeta" class="form-label">Numero de tarjeta</label>
                         <input type="text" th:field="*{numeroTarjeta}" data-inputmask="'mask': '9999-9999-9999-9999'"
-                               class="form-control" id="numeroTarjeta">
+                               class="form-control" id="numeroTarjeta" required>
+                        <div class="invalid-feedback mt-0">Este campo es obligatorio</div>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6">
@@ -36,45 +40,51 @@
                         <label for="dueDateYYMM" class="form-label">Vencimiento</label>
                         <input type="text" th:field="*{dueDateYYMM}"
                                data-inputmask="'mask': '99/99', 'placeholder': 'yy/mm'"
-                               class="form-control" id="dueDateYYMM">
+                               class="form-control" id="dueDateYYMM" required>
+                        <div class="invalid-feedback mt-0">Este campo es obligatorio</div>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6">
                     <div class="form-group">
-                        <label for="cvv" class="form-label">CVV</label>
+                        <label for="cvv" class="form-label">Código de seguridad (CVV)</label>
                         <input type="text" th:field="*{cvv}" data-inputmask="'mask': '999', 'placeholder': '999'"
-                               class="form-control" id="cvv">
+                               class="form-control" id="cvv" required>
+                        <div class="invalid-feedback mt-0">Este campo es obligatorio</div>
                     </div>
                 </div>
 
                 <div class="col-12 col-sm-6">
                     <div class="form-group">
                         <label for="documento" class="form-label">Documento de Identidad</label><br/>
-                        <select id="documento" th:field="*{tipoDocumento}" autocomplete="off" class="form-control">
-                            <option value="-">Seleccion documento</option>
-                            <option value="1">DNI</option>
-                            <option value="2">Carnet de extranjeria</option>
+                        <select id="documento" th:field="*{tipoDocumento}" autocomplete="off" class="form-control"
+                                required>
+                            <option value="">Seleccion documento</option>
+                            <option value="DNI">DNI</option>
                         </select>
+                        <div class="invalid-feedback mt-0">Este campo es obligatorio</div>
                     </div>
                 </div>
 
                 <div class="col-12 col-sm-6">
                     <div class="form-group">
                         <label for="numero" class="form-label">Numero de documento</label>
-                        <input type="text" th:field="*{nroDocumento}" class="form-control numeric" id="numero">
+                        <input type="text" th:field="*{nroDocumento}"
+                               onkeypress="return numberDecimal(event, 8, 0, false)" class="form-control"
+                               id="numero" required>
+                        <div class="invalid-feedback mt-0">Este campo es obligatorio</div>
                     </div>
                 </div>
 
-                <div style="background-color: #10356D!important; width: 100%; height: 100%; flex:1;">
-                    <div class="d-flex justify-content-around align-items-center">
-                        <div class="px-3">
-                            <p class="text-one-70" style="color:#FFFFFF">Total</p>
+                <div class="col-12" style="background-color: #10356D!important;">
+                    <div class="d-flex justify-content-between align-items-center container">
+                        <div class="py-3 mb-0">
+                            <p class="text-one-70 text-white mb-0">Total</p>
                             <small th:text="'s/. '+ *{montoTotal}" class="electroplus__cabecera_title text-one "
                                    style="color:#FFFFFF"></small>
                         </div>
                         <div>
-                            <button class="btn btn-primary btn-block" type="submit" style="margin-top: -8px">Finalizar
-                                Compra
+                            <button class="btn btn-success btn-block" type="submit">
+                                Comprar ahora <i class="feather icon-lock"></i>
                             </button>
                         </div>
                     </div>
@@ -84,10 +94,8 @@
     </div>
 </div>
 
-<script th:src="@{/webjars/jquery.inputmask/jquery.inputmask.min.js}"></script>
 <script>
     $(":input").inputmask();
-    $(".numeric").numeric({ decimal : false,  negative : false });
 </script>
 </body>
 </html>
